wip: version for plugin